k8s/code-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      containers:
        - name: code-server
          image: linuxserver/code-server:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
          volumeMounts:
            - mountPath: /config
              name: code-server-config
          imagePullPolicy: IfNotPresent
      volumes:
        - name: code-server-config
          hostPath:
            # directory location on host
            path: /opt/code-server/config
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: code-server-service
spec:
  ports:
  - port: 80
    targetPort: 8443
    name: http
  selector:
    app: code-server
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: code-server-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: internal-acme-crt-secret
      hosts:
        - '*.internal.lazz.tech'
  rules:
  - host: code.internal.lazz.tech
    http:
      paths:
      - backend:
          serviceName: code-server-service
          servicePort: http
